[package]
name = "enarx-keepmgr"
version = "0.1.0"
authors = ["MikeCamel <mike@p2ptrust.org>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.7", features = ["blocking", "json", "native-tls"] }
rand = "0.7.3"
hyper = "0.13"
tokio = { version = "0.2", features = ["macros"] }
warp = { version = "0.2", features = ["tls"] }
serde = { version = "1.0", features = ["derive"] }
ciborium = { git = "https://github.com/enarx/ciborium", features = ["serde"] }
# serde_cbor = "0.10"
# cbor = { version = "0.4.1" }
http = "0.2"

futures = "0.3.7"
bytes = "0.6.0"

glob = "0.3.0"

fork = "0.1.17"
uuid =  { version = "0.8", features = ["serde", "v4"] }

koine = { path = "../koine" }

config = "0.10.1"